--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -3,24 +3,47 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="16dp">
+    android:paddingEnd="6dp"
+    android:paddingStart="6dp"
+    android:paddingTop="12dp"
+    android:paddingBottom="12dp">
+    <com.google.android.material.checkbox.MaterialCheckBox
 
+        android:id="@+id/checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
     <TextView
         android:id="@+id/text_view_title"
+        android:layout_marginStart="8dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        app:layout_constraintStart_toEndOf="@+id/checkBox"
         android:layout_height="wrap_content"
-        android:text="Task Title"
-        android:textSize="16sp"
+        android:text="@string/task_title"
+        android:textSize="17sp"
+        app:layout_constraintEnd_toEndOf="parent"
         />
     <TextView
         android:id="@+id/text_view_details"
+        app:layout_constraintStart_toStartOf="@+id/text_view_title"
         app:layout_constraintTop_toBottomOf="@id/text_view_title"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        app:layout_constraintEnd_toEndOf="@id/text_view_title"
         android:layout_height="wrap_content"
-        android:text="Task Details"
+        android:text="@string/task_details"
         android:textSize="14sp"
         />
+    <CheckBox
+        android:id="@+id/checkBox_STAR"
+        android:button="@drawable/icon_star_selector"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
