--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -36,7 +36,7 @@
         android:text="@string/task_details"
         android:textSize="14sp"
         />
-    <CheckBox
+    <com.google.android.material.checkbox.MaterialCheckBox
         android:id="@+id/checkBox_STAR"
         android:button="@drawable/icon_star_selector"
         android:layout_width="wrap_content"
